fix(testimonials-slider): resolves overflow issue

--- a/assets/scss/components/_testimonials-slider.scss
+++ b/assets/scss/components/_testimonials-slider.scss
@@ -1,4 +1,7 @@
 .testimonials-slider {
+  width: 100%;
+  overflow: hidden;
+
   @include media-breakpoint-up(md) {
     .testimonials-slider__slides {
       column-width: inherit;
